Quorum3/Library/Tests/Templating/Pass/PassIntegerTakesText_12.quorum
class Main
    action Main
        Test<text> something
        something:doSomething(5)
    end
end