Quorum3/Library/Tests/Templating/Fail/PassTextTakesNumber_8.quorum
class main
    action Main
        Test<number> something
        something:doSomething("text")
    end
end